# chatterbox-es-latam

./: .gitignore  README.md  check_dataset.py  pyproject.toml  requirements.txt  run_training.sh  runpod_train.sh  synthesize.py  train.py
chatterbox_es_latam/: __init__.py  training_logger.py
configs/: training_config.yaml
scripts/: run_train.sh
src/: __init__.py  dataset_orpheus.py  lora_es_latam.py
tests/: __init__.py  test_training_logger.py
